--- a/package.json
+++ b/package.json
@@ -49,9 +49,12 @@
     }
   },
   "dependencies": {
+    "@taquito/signer": "^11.2.0",
+    "@taquito/taquito": "^11.2.0",
     "electron-reload": "^1.5.0",
     "electron-squirrel-startup": "^1.0.0",
-    "sirv-cli": "^2.0.2"
+    "sirv-cli": "^2.0.2",
+    "svelte-spa-router": "^3.2.0"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.63",
@@ -61,20 +64,29 @@
     "@electron-forge/maker-zip": "^6.0.0-beta.63",
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-image": "^2.1.1",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.0",
     "@tsconfig/svelte": "^3.0.0",
     "concurrently": "^7.0.0",
+    "crypto": "^1.0.1",
     "electron": "17.0.0",
+    "electron-rebuild": "^3.2.7",
+    "http": "^0.0.1-security",
+    "https": "^1.0.0",
     "node-sass": "^7.0.1",
     "rollup": "^2.67.2",
     "rollup-plugin-livereload": "^2.0.5",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-globals": "^1.4.0",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-scss": "^3.0.0",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "svelte": "^3.46.4",
     "svelte-check": "^2.4.3",
     "svelte-preprocess": "^4.10.3",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "util": "^0.12.4"
   }
 }
