--- a/package.json
+++ b/package.json
@@ -1,92 +1,48 @@
 {
   "name": "churros",
-  "productName": "Churros",
   "version": "1.0.0",
-  "description": "Explorer for local instance of the Tezos blockchain with Flextesa",
-  "main": "src/index.js",
-  "scripts": {
-    "start": "concurrently \"npm:svelte-dev\" \"electron-forge start\"",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish",
-    "lint": "echo \"No linting configured\"",
-    "svelte-build": "rollup -c",
-    "svelte-dev": "rollup -c -w",
-    "svelte-start": "sirv public"
+  "devDependencies": {
+    "@tsconfig/svelte": "^2.0.1",
+    "@types/node": "^16.11.11",
+    "autoprefixer": "^10.4.0",
+    "buffer": "^6.0.3",
+    "cross-env": "^7.0.3",
+    "crypto-browserify": "^3.12.0",
+    "css-loader": "^6.5.1",
+    "events": "^3.3.0",
+    "https-browserify": "^1.0.0",
+    "mini-css-extract-plugin": "^2.4.5",
+    "node-sass": "^6.0.1",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "postcss-loader": "^6.2.1",
+    "sass-loader": "^12.3.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "style-loader": "^3.3.1",
+    "svelte": "^3.44.2",
+    "svelte-check": "^2.2.10",
+    "svelte-loader": "^3.1.2",
+    "svelte-preprocess": "^4.9.8",
+    "ts-loader": "^9.2.6",
+    "tslib": "^2.3.1",
+    "typescript": "^4.5.2",
+    "url": "^0.11.0",
+    "webpack": "^5.64.4",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.6.0"
   },
-  "keywords": [
-    "Tezos",
-    "blockchain",
-    "Flextesa"
-  ],
-  "author": "Claude Barde",
-  "license": "MIT",
-  "config": {
-    "forge": {
-      "packagerConfig": {},
-      "makers": [
-        {
-          "name": "@electron-forge/maker-squirrel",
-          "config": {
-            "name": "crawler"
-          }
-        },
-        {
-          "name": "@electron-forge/maker-zip",
-          "platforms": [
-            "darwin"
-          ]
-        },
-        {
-          "name": "@electron-forge/maker-deb",
-          "config": {}
-        },
-        {
-          "name": "@electron-forge/maker-rpm",
-          "config": {}
-        }
-      ]
-    }
+  "scripts": {
+    "build": "cross-env NODE_ENV=production webpack",
+    "dev": "webpack serve",
+    "validate": "svelte-check",
+    "start-flextesa": "docker run --env flextesa_node_cors_origin='*' --rm --name hangzhou-sandbox --detach -p 20000:20000 tqtezos/flextesa:20210930  hangzbox start"
   },
   "dependencies": {
-    "@taquito/signer": "^11.2.0",
-    "@taquito/taquito": "^11.2.0",
-    "electron-reload": "^1.5.0",
-    "electron-squirrel-startup": "^1.0.0",
-    "sirv-cli": "^2.0.2",
+    "@taquito/rpc": "^11.2.0",
+    "@taquito/signer": "^11.0.2",
+    "@taquito/taquito": "^11.0.2",
+    "file-loader": "^6.2.0",
     "svelte-spa-router": "^3.2.0"
-  },
-  "devDependencies": {
-    "@electron-forge/cli": "^6.0.0-beta.63",
-    "@electron-forge/maker-deb": "^6.0.0-beta.63",
-    "@electron-forge/maker-rpm": "^6.0.0-beta.63",
-    "@electron-forge/maker-squirrel": "^6.0.0-beta.63",
-    "@electron-forge/maker-zip": "^6.0.0-beta.63",
-    "@rollup/plugin-commonjs": "^11.0.2",
-    "@rollup/plugin-image": "^2.1.1",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@rollup/plugin-typescript": "^8.3.0",
-    "@tsconfig/svelte": "^3.0.0",
-    "concurrently": "^7.0.0",
-    "crypto": "^1.0.1",
-    "electron": "17.0.0",
-    "electron-rebuild": "^3.2.7",
-    "http": "^0.0.1-security",
-    "https": "^1.0.0",
-    "node-sass": "^7.0.1",
-    "rollup": "^2.67.2",
-    "rollup-plugin-livereload": "^2.0.5",
-    "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-globals": "^1.4.0",
-    "rollup-plugin-node-polyfills": "^0.2.1",
-    "rollup-plugin-scss": "^3.0.0",
-    "rollup-plugin-svelte": "^7.1.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "svelte": "^3.46.4",
-    "svelte-check": "^2.4.3",
-    "svelte-preprocess": "^4.10.3",
-    "typescript": "^4.5.5",
-    "util": "^0.12.4"
   }
 }
