--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "@tsconfig/svelte/tsconfig.json",
-  "include": ["src/**/*", "src/node_modules/**/*"],
+  "include": ["src/**/*", "src/node_modules/**/*", "webpack.config.js"],
   "exclude": ["node_modules/*", "__sapper__/*", "static/*"],
   "compilerOptions": {
     "target": "es6"
