--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "start-flextesa": "docker run --env flextesa_node_cors_origin='*' --rm --name hangzhou-sandbox --detach -p 20000:20000 tqtezos/flextesa:20210930  hangzbox start"
   },
   "dependencies": {
+    "@taquito/michelson-encoder": "^12.0.0",
     "@taquito/rpc": "^11.2.0",
     "@taquito/signer": "^11.2.0",
     "@taquito/taquito": "^11.2.0",
+    "@taquito/utils": "^11.2.0",
     "file-loader": "^6.2.0",
     "svelte-spa-router": "^3.2.0"
   }
