--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@taquito/taquito": "^11.2.0",
     "@taquito/utils": "^11.2.0",
     "file-loader": "^6.2.0",
-    "svelte-spa-router": "^3.2.0"
+    "svelte-spa-router": "^3.2.0",
+    "worker-loader": "^3.0.8"
   }
 }
