--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@taquito/signer": "^11.2.0",
     "@taquito/taquito": "^11.2.0",
     "@taquito/utils": "^11.2.0",
+    "dexie": "^3.2.1",
     "file-loader": "^6.2.0",
     "svelte-spa-router": "^3.2.0",
     "worker-loader": "^3.0.8"
